--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -63,9 +63,9 @@ h1, h2, h3 {
 
 // Botón secundario
 .btn-secondary {
-    background-color: #6c757d !important;
-    border-color: #6c757d !important;
-    color: #FFFFFF !important;
+    background-color: #000000 !important;
+    border-color: #000000 !important;
+    color: #ffffff !important;
 }
 
 /* PANEL LATERAL */
