--- a/resources/sass/user.scss
+++ b/resources/sass/user.scss
@@ -34,7 +34,7 @@ $card-text-color: #000000; // Color gris por defecto
 
 // Sidebar
 .sidebar {
-    background-color: #0056b3;
+    background-color: #0dfdf1;
     position: fixed;
     left: 0;
     top: 0;
@@ -50,7 +50,7 @@ $card-text-color: #000000; // Color gris por defecto
     }
 
     .nav-link {
-        color: #ffffff;
+        color: #000000;
         &:hover {
             color: lighten(#ffffff, 10%);
         }
@@ -227,9 +227,9 @@ hr {
 .tab-content > .tab-pane {
     min-height: 200px; 
     padding: 1rem; 
-    border: 1px solid #dee2e6; 
+    border: 1px solid #57ffe9; 
     border-radius: 0.25rem; 
-    background-color: #fff;
+    background-color: #57ffe9;
 }
 
 .nav-pills .nav-link {
@@ -240,12 +240,12 @@ hr {
 }
 
 .nav-pills .nav-link.active {
-    background-color: #0d6efd; 
-    color: white;
+    background-color: #3dfd0d; 
+    color: black;
 }
 
 .nav-pills .nav-link:hover {
-    background-color: #0056b3; 
-    color: white;
+    background-color: #b30095; 
+    color: black;
 }
 
